--- a/FileBackup/FileBackup.csproj
+++ b/FileBackup/FileBackup.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileHelper.cs" />
     <Compile Include="Utility\Hashing\HashedFile.cs" />
+    <Compile Include="Utility\Hashing\HashedFileFactory.cs" />
     <Compile Include="Utility\Hashing\HashingStrategy.cs" />
     <Compile Include="Utility\Logger.cs" />
   </ItemGroup>
@@ -64,9 +65,6 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="source.idx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="info.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
