--- a/FileBackup/FileBackup.csproj
+++ b/FileBackup/FileBackup.csproj
@@ -35,6 +35,18 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -47,8 +59,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileBackup\BackupManager.cs" />
+    <Compile Include="FileBackup\Factories\BackupManagerFactory.cs" />
+    <Compile Include="FileBackup\Factories\IndexFactory.cs" />
+    <Compile Include="FileBackup\Factories\RepositoryFactory.cs" />
     <Compile Include="FileBackup\Index.cs" />
     <Compile Include="FileBackup\Repository\FileRepository.cs" />
+    <Compile Include="FileObserver\Factories\PathObserverFactory.cs" />
+    <Compile Include="FileObserver\Factories\PathSubjectFactory.cs" />
     <Compile Include="Utility\ChangeType.cs" />
     <Compile Include="FileObserver\PathObserver.cs" />
     <Compile Include="FileObserver\PathSubject.cs" />
@@ -56,7 +73,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\FileHelper.cs" />
     <Compile Include="Utility\Hashing\HashedFile.cs" />
-    <Compile Include="Utility\Hashing\HashedFileFactory.cs" />
+    <Compile Include="Utility\Factories\HashedFileFactory.cs" />
     <Compile Include="Utility\Hashing\HashingStrategy.cs" />
     <Compile Include="Utility\Logger.cs" />
   </ItemGroup>
@@ -64,7 +81,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
     <None Include="source.idx" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
